完成了普通和pro版的要求

--- a/assignment/VideoPlayer/app/src/main/AndroidManifest.xml
+++ b/assignment/VideoPlayer/app/src/main/AndroidManifest.xml
@@ -13,12 +13,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.bytedance.videoplayer.MainActivity">
+        <activity android:name=".ture_main_activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <data android:scheme="file" />
+                <data android:scheme="content"/>
+                <data android:mimeType="video/mp4" />
+                <data android:mimeType="video/3gpp" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
